<resources>
    <string name="app_name">Birthdays</string>

    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="gift">Gift</string>

    <string name="menu_add_bday">Add birthday</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>

    <string name="search_hidden">Enter a pattern</string>

    <string name="context_delete_bday">Delete birthday</string>

    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_is">Notifications о днях рождениях</string>
    <string name="pref_notifications_is_summary_true">Вкл.</string>
    <string name="pref_notifications_is_summary_false">Выкл.</string>
    <string name="pref_notifications_days">Количество дней до дня рождения</string>
    <string name="pref_notifications_days_summary">Оповещение за %1$d дней</string>
    <string name="pref_notifications_time">Время оповещения</string>
    <string name="pref_notifications_time_summary">%1$s</string>

    <string-array name="periods">
        <item>1 day</item>
        <item>3 days</item>
        <item>1 week</item>
        <item>1 month</item>
    </string-array>

    <string name="ticker">ticker</string>
    <string name="title">title</string>
    <string name="notification_text">%1$d has a birthday %2$s!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings_k">Settings</string>
    <string name="notification_today_text">Сегодня день рождения у %1$s!</string>

    <string name="text_category">Category</string>
    <string-array name="categories">
        <item>Birthday</item>
        <item>Wedding</item>
    </string-array>
</resources>
